# libbash

./: .gitignore  .gitmodules  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py  setup_test.sh  test.py
.github/workflows/: build.yml  test.yml
bash-5.2/: Makefile.in  eval.c  externs.h  parse.y  shell.c  y.tab.c
bash-5.2/builtins/: Makefile.in
bash-5.2/examples/loadables/: Makefile.in
bash-5.2/examples/loadables/perl/: Makefile.in
bash-5.2/lib/glob/: Makefile  Makefile.in
bash-5.2/lib/intl/: Makefile  Makefile.in
bash-5.2/lib/malloc/: Makefile  Makefile.in
bash-5.2/lib/readline/: Makefile  Makefile.in
bash-5.2/lib/sh/: Makefile  Makefile.in
bash-5.2/lib/termcap/: Makefile  Makefile.in
bash-5.2/lib/tilde/: Makefile  Makefile.in
bash-5.2/support/: Makefile.in
libbash/: __init__.py  api.py  ctypes_bash_command.py  test.py
libbash/api/: __init__.py  ast_equals.py  ast_to_bash.py  ast_to_json.py  bash_to_ast.py  configure_bash.py
libbash/bash_c_interface/: __init__.py  api_common.py  ast_to_json.py  bash_to_ast.py  ctypes_bash_command.py
libbash/bash_command/: __init__.py  command.py  flags.py  util.py
libbash/c_bash/: __init__.py  ctypes_bash_command.py
libbash/test/: __init__.py  test.py
python/: bash-command.py
python/bash_c_interface/: bash_to_ast.py  ctypes_bash_command.py
python/bash_command/: command.py  flags.py
