[project]
name = "libbash"
version = "0.1.4"
authors = [
  { name="Seth Sabar", email="sethsabar@gmail.com" },
]
description = "A library for parsing bash scripts."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
dependencies = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/binpash/libbash"
Issues = "https://github.com/binpash/libbash/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"