[project]
name = "libbash"
version = "0.1.14"
authors = [
  { name="Seth Sabar", email="sethsabar@gmail.com" },
]
description = "A library for parsing bash scripts."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
dependencies = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/binpash/libbash"
Issues = "https://github.com/binpash/libbash/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
# doesn't work for some reason
# shouldn't be necessary since bash has no
# dependencies besides libc (checked on linux with audit wheel)
repair-wheel-command = ""
